# fsbe

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  fsb.db  fsbe.db  generate_secret_key.py  main.py  mainTest.py  schemas.py
app/Security/: SecurityManager.py
app/db/: database.py  fsbe.db
app/internal/: auth.py
app/model/: Company.py  Notification.py  PlanningActivity.py  User.py  models.py  schemas.py
app/models/: users.py
app/routers/: activities_router.py  companies_router.py  notifications_router.py  users_router.py
